--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando entorno Desarrollo
-configuracion.autor.nombre=Jose santos
+configuracion.texto=Configurando entorno Desarrollo final
+configuracion.autor.nombre=santy
 configuracion.autor.email=josemendez1587@yahoo.com
